--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@reduxjs/toolkit": "^2.2.4",
+    "animate.css": "^4.1.1",
     "firebase": "9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
